[gd_scene load_steps=29 format=3 uid="uid://dskyondnaylrl"]

[ext_resource type="Script" path="res://Scripts/battle_clock.gd" id="1_3ujc8"]
[ext_resource type="Script" path="res://Scripts/clock_battle.gd" id="2_1qn5u"]
[ext_resource type="Texture2D" uid="uid://7b2xrpre7ifa" path="res://Sprites/Battle Clock/clock_back.png" id="3_4n4kf"]
[ext_resource type="Texture2D" uid="uid://v6qj1nhtg21t" path="res://Sprites/Battle Clock/clock_center.png" id="4_o02kc"]
[ext_resource type="Texture2D" uid="uid://047qgrtjtprj" path="res://Sprites/Battle Clock/hour_hand.png" id="5_55m8o"]
[ext_resource type="Script" path="res://Scripts/hour_hand.gd" id="6_crndd"]
[ext_resource type="Texture2D" uid="uid://bgikfycuv6l6i" path="res://Sprites/Battle Clock/minute_hand.png" id="7_ls37p"]
[ext_resource type="Script" path="res://Scripts/minute_hand.gd" id="8_7hhom"]
[ext_resource type="Texture2D" uid="uid://bfvw5d5wpbjo0" path="res://Sprites/Battle Clock/second_hand.png" id="9_upqk7"]
[ext_resource type="Script" path="res://Scripts/second_hand.gd" id="10_o8ymu"]
[ext_resource type="Texture2D" uid="uid://bsl1yf3h1u4h2" path="res://Sprites/Battle Clock/attack_icon.png" id="11_8wfau"]
[ext_resource type="Texture2D" uid="uid://b4nmktk2fmgdd" path="res://Sprites/Battle Clock/magic_icon.png" id="12_twki4"]
[ext_resource type="Texture2D" uid="uid://ler16mt8pxen" path="res://Sprites/Battle Clock/defend_icon.png" id="13_bpnm4"]
[ext_resource type="Texture2D" uid="uid://bo7hlbcy3ajep" path="res://Sprites/Battle Clock/item_icon.png" id="14_vcrok"]
[ext_resource type="Texture2D" uid="uid://dsq4b0ti8yvru" path="res://Sprites/Battle Clock/flee_icon.png" id="15_yak32"]
[ext_resource type="Texture2D" uid="uid://4vhjmxdu67qr" path="res://Sprites/Battle Clock/temporal_icon.png" id="16_ddkt1"]
[ext_resource type="Texture2D" uid="uid://in0fvokdvx1d" path="res://Sprites/Battle Clock/party_icon.png" id="17_ngb1a"]
[ext_resource type="Texture2D" uid="uid://blyhlo024r3p2" path="res://Sprites/Battle Clock/tactics_icon.png" id="18_x318s"]
[ext_resource type="Script" path="res://Scripts/text.gd" id="19_v0jch"]
[ext_resource type="Script" path="res://Scripts/conditions.gd" id="20_gltfc"]
[ext_resource type="Script" path="res://Scripts/change_scene_battle.gd" id="21_trbte"]

[sub_resource type="Animation" id="Animation_snghl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clock/HourHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mniu2"]
resource_name = "hour_hand_spin"
length = 8.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Clock/HourHand:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 5, 6, 7, 8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.785398, 1.5708, 2.35619, 3.14159, 3.92699, 4.71239, 5.49779, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nfqvt"]
_data = {
"RESET": SubResource("Animation_snghl"),
"hour_hand_spin_8": SubResource("Animation_mniu2")
}

[sub_resource type="SystemFont" id="SystemFont_dwu41"]
font_names = PackedStringArray("MV Boli")

[sub_resource type="LabelSettings" id="LabelSettings_rtrxk"]
font = SubResource("SystemFont_dwu41")

[sub_resource type="SystemFont" id="SystemFont_g32wo"]
font_names = PackedStringArray("MV Boli")

[sub_resource type="LabelSettings" id="LabelSettings_53qqn"]
font = SubResource("SystemFont_g32wo")

[node name="Battle Clock" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ujc8")

[node name="Clock" type="Node2D" parent="."]
position = Vector2(145, 325)
script = ExtResource("2_1qn5u")

[node name="ClockBack" type="Sprite2D" parent="Clock"]
texture = ExtResource("3_4n4kf")

[node name="ClockCenter" type="Sprite2D" parent="Clock"]
z_index = 10
texture = ExtResource("4_o02kc")

[node name="HourHand" type="Sprite2D" parent="Clock"]
z_index = 9
texture = ExtResource("5_55m8o")
script = ExtResource("6_crndd")

[node name="MinuteHand" type="Sprite2D" parent="Clock"]
visible = false
z_index = 8
texture = ExtResource("7_ls37p")
script = ExtResource("8_7hhom")

[node name="SecondHand" type="Sprite2D" parent="Clock"]
visible = false
z_index = 7
texture = ExtResource("9_upqk7")
script = ExtResource("10_o8ymu")

[node name="Icons" type="Node2D" parent="Clock"]

[node name="Fight" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("11_8wfau")
offset = Vector2(0, -104)
region_enabled = true
region_rect = Rect2(110.646, 6.4531, 35.3543, 35.9)

[node name="Magic" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("12_twki4")
offset = Vector2(70, -72)
region_enabled = true
region_rect = Rect2(180, 39, 35, 35)

[node name="Defend" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("13_bpnm4")
offset = Vector2(104, 0)
region_enabled = true
region_rect = Rect2(214, 111, 35, 35)

[node name="Item" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("14_vcrok")
offset = Vector2(70, 72)
region_enabled = true
region_rect = Rect2(180, 181, 35, 35)

[node name="Flee" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("15_yak32")
offset = Vector2(0, 104)
region_enabled = true
region_rect = Rect2(111, 214, 35, 35)

[node name="Temporal Ability" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("16_ddkt1")
offset = Vector2(-70, 72)
region_enabled = true
region_rect = Rect2(41, 181, 35, 35)

[node name="Party" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("17_ngb1a")
offset = Vector2(-104, 0)
region_enabled = true
region_rect = Rect2(7, 111, 35, 35)

[node name="Tactics" type="Sprite2D" parent="Clock/Icons"]
texture = ExtResource("18_x318s")
offset = Vector2(-70, -72)
region_enabled = true
region_rect = Rect2(40, 39, 35, 35)

[node name="IconPositions" type="Node2D" parent="Clock"]

[node name="Position1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position7_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position6_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position5_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position4_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position3_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position2_1" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, -104)

[node name="Position2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(70, -72)
rotation = 0.785398

[node name="Position7_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(80, -65)
rotation = 0.907571

[node name="Position6_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(87, -56)
rotation = 0.994838

[node name="Position5_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(96, -42)
rotation = 1.15192

[node name="Position4_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(104, 0)
rotation = 1.5708

[node name="Position3_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(92, 48)
rotation = 2.04204

[node name="Position2_2" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, 104)
rotation = 3.14159

[node name="Position3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(104, 0)
rotation = 1.5708

[node name="Position7_3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(104, 18)
rotation = 1.74533

[node name="Position6_3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(92, 48)
rotation = 2.04204

[node name="Position5_3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(60, 80)
rotation = 2.49582

[node name="Position4_3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, 104)
rotation = 3.14159

[node name="Position3_3" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-92, 48)
rotation = 4.24115

[node name="Position4" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(70, 72)
rotation = 2.35619

[node name="Position7_4" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(50, 90)
rotation = 2.61799

[node name="Position6_4" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, 104)
rotation = 3.14159

[node name="Position5_4" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-60, 80)
rotation = 3.78736

[node name="Position4_4" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-104, 0)
rotation = 4.71239

[node name="Position5" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(0, 104)
rotation = 3.14159

[node name="Position7_5" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-50, 90)
rotation = 3.66519

[node name="Position6_5" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-92, 48)
rotation = 4.24115

[node name="Position5_5" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-96, -42)
rotation = 5.13127

[node name="Position6" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-70, 72)
rotation = 3.92699

[node name="Position7_6" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-104, 18)
rotation = 4.53786

[node name="Position6_6" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-87, -56)
rotation = 5.28835

[node name="Position7" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-104, 0)
rotation = 4.71239

[node name="Position7_7" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-80, -65)
rotation = 5.37561

[node name="Position8" type="Marker2D" parent="Clock/IconPositions"]
position = Vector2(-70, -72)
rotation = 5.49779

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nfqvt")
}

[node name="Text" type="Control" parent="."]
anchors_preset = 0
offset_left = 8.0
offset_top = 152.0
offset_right = 288.0
offset_bottom = 200.0
script = ExtResource("19_v0jch")

[node name="Label" type="Label" parent="Text"]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 197.0
offset_bottom = 43.0
text = "Text 1"
label_settings = SubResource("LabelSettings_rtrxk")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Text"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 184.0
offset_top = 16.0
offset_right = 309.0
offset_bottom = 43.0
text = "Text 2"
label_settings = SubResource("LabelSettings_53qqn")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TexPosLeft" type="Marker2D" parent="Text"]
position = Vector2(-48, 16)

[node name="TexPosCenter" type="Marker2D" parent="Text"]
position = Vector2(72, 16)

[node name="TexPosRight" type="Marker2D" parent="Text"]
position = Vector2(184, 16)

[node name="Conditions" type="Control" parent="."]
anchors_preset = 0
offset_left = 320.0
offset_top = 128.0
offset_right = 960.0
offset_bottom = 512.0
script = ExtResource("20_gltfc")

[node name="MinuteHandCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 32.0
offset_right = 129.0
offset_bottom = 63.0
focus_mode = 0
text = "Minute Hand"

[node name="SecondHandCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 64.0
offset_right = 129.0
offset_bottom = 95.0
focus_mode = 0
text = "Second Hand"

[node name="FightCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 160.0
offset_right = 130.0
offset_bottom = 191.0
focus_mode = 0
button_pressed = true
text = "Fight"

[node name="MagicCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 192.0
offset_right = 130.0
offset_bottom = 223.0
focus_mode = 0
button_pressed = true
text = "Magic"

[node name="DefendCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 224.0
offset_right = 130.0
offset_bottom = 255.0
focus_mode = 0
button_pressed = true
text = "Defend"

[node name="ItemCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_top = 256.0
offset_right = 130.0
offset_bottom = 287.0
focus_mode = 0
button_pressed = true
text = "Item"

[node name="FleeCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_left = 128.0
offset_top = 160.0
offset_right = 258.0
offset_bottom = 191.0
focus_mode = 0
button_pressed = true
text = "Flee"

[node name="TemporalAbilityCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_left = 128.0
offset_top = 192.0
offset_right = 258.0
offset_bottom = 223.0
focus_mode = 0
button_pressed = true
text = "Temporal Ability"

[node name="PartyCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_left = 128.0
offset_top = 224.0
offset_right = 258.0
offset_bottom = 255.0
focus_mode = 0
button_pressed = true
text = "Party"

[node name="TacticsCheck" type="CheckBox" parent="Conditions"]
layout_mode = 0
offset_left = 128.0
offset_top = 256.0
offset_right = 258.0
offset_bottom = 287.0
focus_mode = 0
button_pressed = true
text = "Tactics"

[node name="ResetButton" type="Button" parent="Conditions"]
layout_mode = 0
offset_left = 392.0
offset_top = 184.0
offset_right = 443.0
offset_bottom = 215.0
focus_mode = 0
text = "Reset"

[node name="CenterClockPos" type="Marker2D" parent="."]
position = Vector2(145, 325)

[node name="Change Scene" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = 585.0
offset_right = 1152.0
offset_bottom = 648.0
script = ExtResource("21_trbte")

[node name="Previous" type="Button" parent="Change Scene"]
layout_mode = 0
offset_left = 8.0
offset_top = 18.0
offset_right = 129.0
offset_bottom = 49.0
focus_mode = 0
text = "Previous Clock"

[node name="Next" type="Button" parent="Change Scene"]
layout_mode = 0
offset_left = 1049.0
offset_top = 18.0
offset_right = 1140.0
offset_bottom = 49.0
focus_mode = 0
text = "Next Clock"

[connection signal="end_turn" from="Clock/HourHand" to="Text" method="_on_hour_hand_end_turn"]
[connection signal="send_to_hand" from="Clock/HourHand" to="Clock/MinuteHand" method="_on_hour_hand_send_to_hand"]
[connection signal="end_turn" from="Clock/MinuteHand" to="Text" method="_on_minute_hand_end_turn"]
[connection signal="send_to_hand" from="Clock/MinuteHand" to="Clock/SecondHand" method="_on_minute_hand_send_to_hand"]
[connection signal="end_turn" from="Clock/SecondHand" to="Text" method="_on_second_hand_end_turn"]
[connection signal="minute_hand_toggled" from="Conditions" to="Clock" method="_on_conditions_minute_hand_toggled"]
[connection signal="minute_hand_toggled" from="Conditions" to="Clock/HourHand" method="_on_conditions_minute_hand_toggled"]
[connection signal="minute_hand_toggled" from="Conditions" to="Text" method="_on_conditions_minute_hand_toggled"]
[connection signal="second_hand_toggled" from="Conditions" to="Clock" method="_on_conditions_second_hand_toggled"]
[connection signal="second_hand_toggled" from="Conditions" to="Clock/MinuteHand" method="_on_conditions_second_hand_toggled"]
[connection signal="second_hand_toggled" from="Conditions" to="Text" method="_on_conditions_second_hand_toggled"]
[connection signal="toggled" from="Conditions/MinuteHandCheck" to="Conditions" method="_on_minute_hand_check_toggled"]
[connection signal="toggled" from="Conditions/SecondHandCheck" to="Conditions" method="_on_second_hand_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Clock" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Clock/HourHand" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Clock/MinuteHand" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Clock/SecondHand" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Text" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/FightCheck" to="Conditions" method="_on_fight_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Clock" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Clock/HourHand" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Clock/MinuteHand" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Clock/SecondHand" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Text" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/MagicCheck" to="Conditions" method="_on_magic_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Clock" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Clock/HourHand" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Clock/MinuteHand" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Clock/SecondHand" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Text" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/DefendCheck" to="Conditions" method="_on_defend_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Clock" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Clock/HourHand" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Clock/MinuteHand" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Clock/SecondHand" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Text" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/ItemCheck" to="Conditions" method="_on_item_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Clock" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Clock/HourHand" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Clock/MinuteHand" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Clock/SecondHand" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Text" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/FleeCheck" to="Conditions" method="_on_flee_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Clock" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Clock/HourHand" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Clock/MinuteHand" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Clock/SecondHand" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Text" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/TemporalAbilityCheck" to="Conditions" method="_on_temporal_ability_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Clock" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Clock/HourHand" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Clock/MinuteHand" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Clock/SecondHand" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Text" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/PartyCheck" to="Conditions" method="_on_party_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Clock" method="_on_tactics_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Clock/HourHand" method="_on_tactics_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Clock/MinuteHand" method="_on_tactics_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Clock/SecondHand" method="_on_tactics_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Text" method="_on_tactics_check_toggled"]
[connection signal="toggled" from="Conditions/TacticsCheck" to="Conditions" method="_on_tactics_check_toggled"]
[connection signal="pressed" from="Conditions/ResetButton" to="Clock" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Conditions/ResetButton" to="Text" method="_on_reset_button_pressed"]
[connection signal="pressed" from="Change Scene/Next" to="Change Scene" method="_on_next_pressed"]
